# algorithms

./: CMakeLists.txt
src/: gaussnewton.cpp  gaussnewton1.cpp  kalmanfilter.cpp
